# tools-of-the-tools

./: .gitignore  README.md  pyproject.toml  test_data_new.json  test_data_old.json
src/tt_stats/: analyze.py  cli.py  parser.py
tests/: generate_and_test.py
tests/test_data/: tiktok_data_01.json  tiktok_data_02.json  tiktok_data_03.json  tiktok_data_04.json  tiktok_data_05.json  tiktok_data_06.json  tiktok_data_07.json  tiktok_data_08.json  tiktok_data_09.json  tiktok_data_10.json
tests/test_results/: compare_01_to_02.txt  compare_02_to_03.txt  compare_03_to_04.txt  compare_04_to_05.txt  compare_05_to_06.txt  compare_06_to_07.txt  compare_07_to_08.txt  compare_08_to_09.txt  compare_09_to_10.txt  follower_change_history.json  unfollow_back_01.txt  unfollow_back_02.txt  unfollow_back_03.txt  unfollow_back_04.txt  unfollow_back_05.txt  unfollow_back_06.txt  unfollow_back_07.txt  unfollow_back_08.txt  unfollow_back_09.txt  unfollow_back_10.txt
